updated click icon

--- a/templates/game.html
+++ b/templates/game.html
@@ -1,8 +1,8 @@
 {% extends '_base.html' %}
 {% block content %}
-    
+    <br><br>
     <div id="click-object">
-        <img src="../static-files/click-object.png" onclick="inc()" id="click-object" alt="click object" height="128em" width="128em">
+        <img src="/static/click-object.png" onclick="inc()" alt="click object" height="256em" width="256em">
     </div>
     <style>
 
@@ -15,6 +15,10 @@
         #total {
             display: flex;
             justify-content: center;
+        }
+
+        body {
+            background-color: lightblue;
         }
 
     </style>
