Templates and stylesheet set up

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,6 +1,18 @@
+<!DOCTYPE html>
 <html>
-    <body>
+    <head>
+        <link rel="stylesheet" href="/s/style.css">
         <h1>{% if page_title %} {{page_title}}{% endif %}</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="create.html">Create Account</a>
+            <a href="login.html">Login</a>
+            <a href="game.html">Play Game</a>
+            <a href="marketplace.html">Marketplace</a>
+            <a href="leaderboard.html">Leaderboard</a>
+        </nav>
+    </head>
+    <body>
+        {% block content %} {% endblock %}
     </body>
-    {% block content %} {% endblock %}
-</html>
+    </html>
