--- a/templates/create.html
+++ b/templates/create.html
@@ -1,20 +1,12 @@
-<html>
-    <head>
-        <title>Login</title>
-        <h1>
-            Create an account
-        </h1>
-    </head>
-    <body>
-        <form action="/action_page.php">
-        <label for="uname">Username:</label><br>
-        <input type="text" id="uname" name="uname"><br>
-        <label for="password">Create a Password:</label><br>
-        <input type="text" id="password" name="password"><br>
-        <label for="password">Confirm Password:</label><br>
-        <input type="text" id="password" name="password"><br><br> 
-        <input type="submit" value="Submit">
-        </form>
-    </body>
-
-</html>
+   
+{% extends '_base.html' %}
+{% block content %}
+    <label for="uname">Username:</label><br>
+    <input type="text" id="uname" name="uname"><br>
+    <label for="password">Create a Password:</label><br>
+    <input type="text" id="password" name="password"><br>
+    <label for="password">Confirm Password:</label><br>
+    <input type="text" id="password" name="password"><br><br> 
+    <input type="submit" value="Submit">
+    </form>
+{% endblock %}
