--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
+
 {% extends '_base.html' %}
 {% block content %}
-            page specific body text
+<h2>Welcome to the Clicker Game Website</h2>
 {% endblock %}
