--- a/templates/create.html
+++ b/templates/create.html
@@ -1,12 +1,13 @@
    
 {% extends '_base.html' %}
 {% block content %}
-    <label for="uname">Username:</label><br>
-    <input type="text" id="uname" name="uname"><br>
-    <label for="password">Create a Password:</label><br>
-    <input type="password" id="password" name="password"><br>
-    <label for="password">Confirm Password:</label><br>
-    <input type="password" id="password" name="password"><br><br> 
-    <input type="submit" value="Submit">
+    <form method="post" action="/create-user">
+        <label for="uname">Username:</label><br>
+        <input type="text" id="uname" name="uname"><br>
+        <label for="password">Create a Password:</label><br>
+        <input type="password" id="password" name="password"><br>
+        <label for="password">Confirm Password:</label><br>
+        <input type="password" id="password-confirm" name="password-confirm"><br><br> 
+        <input type="submit" value="Submit">
     </form>
 {% endblock %}
