added basic login functionality

--- a/templates/game.html
+++ b/templates/game.html
@@ -1,4 +1,4 @@
-{% extends '_base.html' %}
+{% extends '_game.html' %}
 {% block content %}
     </body>
     <body id = "game-body">
@@ -6,11 +6,6 @@
     <div id="click-object">
         <img src="/s/click-object.png" onclick="inc()" alt="click object" height="256em" width="256em">
     </div>
-    <style>
-
-        
-
-    </style>
 
 
     <script>
