--- a/templates/_game.html
+++ b/templates/_game.html
@@ -13,6 +13,9 @@
         </nav>
     </head>
     <body>
+        <br>
+        <h2>Welcome{% if uname %} {{uname}}{% endif %}!</h2>
+
         {% block content %} {% endblock %}
     </body>
     </html>
