game page now gets account collectibles

--- a/templates/_game.html
+++ b/templates/_game.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="stylesheet" href="/s/style.css">
         <h1>{% if page_title %} {{page_title}}{% endif %}</h1>
         <nav>
@@ -18,6 +19,6 @@
 
         {% block content %} {% endblock %}
 
-        <h2 id="total">{% if user is defined and user['collectibles'] %}{{user['collectibles']}}{% else %}0{% endif %}</h2>
+        <h2 id="total">{% if user is defined and user['collectibles'] is defined %}{{user['collectibles']}}{% else %}-1{% endif %}</h2>
     </body>
     </html>
