--- a/templates/game.html
+++ b/templates/game.html
@@ -1,7 +1,7 @@
 {% extends '_game.html' %}
 {% block content %}
     </body>
-    <body id = "game-body" onpagehide = "updateAccount()">
+    <body id = "game-body" onpagehide = "leaveGame()">
     <br><br>
     <div id="click-object">
         <img src="/s/click-object.png" onclick="inc()" alt="click object" height="256em" width="256em">
@@ -20,15 +20,34 @@
 
         function inc(){
             //alert("total: " + document.getElementById('total').textContent + " " + parseInt(document.getElementById('total').textContent));
-            count = count + 1;
+            //count = count + 1;
             //alert(count);
+
+            {% if user is defined %}
+                // increment the datastore account entity's collectibles
+                $.ajax({ url: "/incCollectibles", type: "POST", data: {{user|tojson}}, 
+                success: function(response){
+                    console.log(response);
+                },
+                error: function(error){
+                    console.log(error);
+                }});
+                
+                // TEMP FIX, should make a function that gets the most recent collectibles value
+                count = count + 1;
+
+            {% else %}
+                // do nothing, doesn't have an account
+                count = count + 1;
+            {% endif %}
+
             document.getElementById("total").textContent = count;
         }
 
         // updates the datastore entity with data from the the user's session
-        function updateAccount(){
+        function leaveGame(){
             
-            console.log("Well updateAccount() is being called at least");
+            console.log("Well leaveGame() is being called at least");
 
             {% if user is defined %}
             //let count = {{ user|tojson }}.collectibles;
@@ -42,7 +61,7 @@
 
                 console.log("   After the post request");
                 */
-                $.ajax({ url: "/updateUserAccount", type: "POST", data: {{user|tojson}}, 
+                $.ajax({ url: "/leaveGame", type: "POST", data: {{user|tojson}}, 
                 success: function(response){
                     console.log(response);
                 },
