--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,7 +1,7 @@
 {% extends '_base.html' %}
 {% block content %}
     <p>See how other players are doing.</p>
-    <table style = "margin-left:auto;margin-right:auto">
+    <table>
         <tr>
             <td><strong>Name</strong></td>
             <td><strong>Cookies</strong></td>
