--- a/templates/marketplace.html
+++ b/templates/marketplace.html
@@ -1,10 +1,14 @@
 {% extends '_base.html' %}
 {% block content %}
         <p>This is the place to make your cookies special. Create or search for a new design!</p>
+        <div id = "userinput">
         <input type="button" value = "Upload a new cookie design!">
+        </div>
         <br>
         <p>OR</p>
         <p>Search for a design made by another user!</p>
+        <div id = "userinput">
         <input type="text">
         <input type="button" value = "Search">
+        </div>
 {% endblock %}
