--- a/static-files-folder/style.css
+++ b/static-files-folder/style.css
@@ -5,6 +5,7 @@ header{
                 padding-left: 25%;
                 padding-right: 25%;
                 
+                
 }
 head {
     background-color: grey;
@@ -12,13 +13,17 @@ head {
 nav{
             
                 display: flex;
-                justify-content: flex-start;
+                justify-content: space-around;
                 gap: 1em;
                 
                 
 }
 button{
-                font-size: xx-large;
+                font-size: x-large;
+                border-radius: 10px;
+                border-color: #58727f;
+                width: 200px;
+                
 }
 
 #click-object {
@@ -33,7 +38,12 @@ button{
 }
 
 body {
-            background-color: lightblue;
+            
+            background-color: lightblue;  
+            font-family: Helvetica, sans-serif;
+            
+            
+            
 }
 table, th {    
             border: 1px solid black;
@@ -42,6 +52,7 @@ table, th {
             margin-right: auto;
             width: 33%;
             background-color: white;
+            
 }
 td {
     border: 1px solid black;
@@ -54,11 +65,10 @@ td {
     text-align: center;
 }
 
-button {
-    font-size: medium;
-}
+
 #topOfPage {
-    background-color: darkslategrey;
+    
+    background-color: #58727f; 
     padding-top: 5px;
     padding-bottom: 20px;
     padding-left: 10px;
@@ -66,5 +76,36 @@ button {
     border-radius: 10px;
     color: white;
     font-family: Helvetica, sans-serif
+    
 }
+h1{
+    display: flex;
+    justify-content: center;
+    
+}
+h2{
+    display: flex;
+    justify-content: center;
+
+}
+p{
+    display: flex;
+    justify-content: center;
+    font-family: Garamond, serif;
+    font-size: 20px;
+}
+input{
+    display: flex;
+    justify-content: center;
+}
+#userinput{
+    display: flex;
+    justify-content: center;
+}
+
+a{
+    display: flex;
+    justify-content: center;
+}
+
 
