--- a/templates/_base.html
+++ b/templates/_base.html
@@ -2,15 +2,17 @@
 <html>
     <head>
         <link rel="stylesheet" href="/s/style.css">
+        <div id = "topOfPage">
         <h1>{% if page_title %} {{page_title}}{% endif %}</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="create.html">Create Account</a>
-            <a href="login.html">Login</a>
-            <a href="game.html">Play Game</a>
-            <a href="marketplace.html">Marketplace</a>
-            <a href="leaderboard.html">Leaderboard</a>
+            <a href="index.html"><button>Home</button></a>
+            <a href="create.html"><button>Create Account</button></a>
+            <a href="login.html"><button>Login</button></a>
+            <a href="game.html"><button>Play Game</button></a>
+            <a href="marketplace.html"><button>Marketplace</button></a>
+            <a href="leaderboard.html"><button>Leaderboard</button></a>
         </nav>
+        </div>
     </head>
     <body>
         {% block content %} {% endblock %}
