--- a/templates/create.html
+++ b/templates/create.html
@@ -1,13 +1,26 @@
    
 {% extends '_base.html' %}
 {% block content %}
+   <br>
     <form method="post" action="/create-user">
+        <div id = "userinput">
         <label for="uname">Username:</label><br>
         <input type="text" id="uname" name="uname"><br>
+        </div>
+        
+        <br>
+        
+        <div id = "userinput">
         <label for="password">Create a Password:</label><br>
-        <input type="password" id="password" name="password"><br>
+        <input type="password" id="password" name="password">
+        </div>
+
+        <br>
+
+        <div id = "userinput">
         <label for="password">Confirm Password:</label><br>
         <input type="password" id="password-confirm" name="password-confirm"><br><br> 
         <input type="submit" value="Submit">
+        </div>
     </form>
 {% endblock %}
