--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 {% extends '_base.html' %}
 {% block content %}
-        <form method = "post" action="/login">
+        <br>
+        <form id = "userinput" method = "post" action="/login">
             <label for="uname">Username:</label><br>
             <input type="text" id="uname" name="uname"><br>
             <label for="password">Password:</label><br>
