centered user input boxes

--- a/templates/create.html
+++ b/templates/create.html
@@ -2,25 +2,43 @@
 {% extends '_base.html' %}
 {% block content %}
    <br>
+    <table id = "inputTable">
+    
+    
     <form method="post" action="/create-user">
-        <div id = "userinput">
-        <label for="uname">Username:</label><br>
-        <input type="text" id="uname" name="uname"><br>
-        </div>
+        <tr>
+        <td id = "inputElement">
+        <label for="uname">Username:</label>
+        </td>
+        <td id = "inputElement">
+        <input type="text" id="uname" name="uname">
+        </td>
+        </tr>
         
-        <br>
         
-        <div id = "userinput">
+        <tr>
+        <td id = "inputElement">
         <label for="password">Create a Password:</label><br>
+        </td>
+        <td id = "inputElement">
         <input type="password" id="password" name="password">
-        </div>
+        </td>
+        </tr>
+        
 
-        <br>
-
-        <div id = "userinput">
-        <label for="password">Confirm Password:</label><br>
-        <input type="password" id="password-confirm" name="password-confirm"><br><br> 
+        <tr>
+        <td id = "inputElement">
+        <label for="password">Confirm Password:</label>
+        </td>
+        <td id = "inputElement">
+        <input type="password" id="password-confirm" name="password-confirm">
+        </td>
+        </tr>
+        <tr>
+        <td id = "inputElement">
         <input type="submit" value="Submit">
-        </div>
+        </td>
+        </tr>
     </form>
+    </table>
 {% endblock %}
