--- a/static-files-folder/style.css
+++ b/static-files-folder/style.css
@@ -50,7 +50,7 @@ table, th {
             border-collapse: collapse;
             margin-left: auto;
             margin-right: auto;
-            width: 33%;
+            width: 40%;
             background-color: white;
             
 }
@@ -106,6 +106,12 @@ input{
 a{
     display: flex;
     justify-content: center;
+}
+
+#inputTable,#inputElement{
+    border: white;
+    background-color: lightblue;
+    width: auto;
 }
 
 
