--- a/templates/marketplace.html
+++ b/templates/marketplace.html
@@ -1,10 +1,33 @@
 {% extends '_base.html' %}
 {% block content %}
-        <p>This is the place to make your cookies special. Create or search for a new design!</p>
-        <input type="button" value = "Upload a new cookie design!">
+
+{% if status %}
+<p>Status: {{status}}</p>
+{% else %}
+{% endif %}
+
+        <p>This is the place to make your collectibles special. Create or search for a new design!</p>
+        <form action="/upload-image" enctype="multipart/form-data" method = "POST">
+        Image File: <input type="file" id="img" name ="img" accept="image/*" value = "Upload a new cookie design!">
+        <br><br>Image Name: <input type="text" id="name" name="name">
+        <input type="submit">
+        </form>
         <br>
+
         <p>OR</p>
         <p>Search for a design made by another user!</p>
+        <form action="/image-search" method = "POST">
         <input type="text">
         <input type="button" value = "Search">
+        </form>
+
+        {% for i in items %}
+            <p>Image Name: {{i['title']}} {{i['url']}}<br>
+            <image src="{{i['url']}}"></p>
+        {% else %}
+            <br>No Images Found.
+        {% endfor %}
+       
+
+
 {% endblock %}
