--- a/static-files-folder/style.css
+++ b/static-files-folder/style.css
@@ -39,7 +39,8 @@ button{
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
-    gap: 5vw;
+    row-gap: 4vw;
+    column-gap: 6vw;
     align-items: stretch;
     background-color: rgb(127, 255, 53);
     border-radius: 10px;
