--- a/templates/marketplace.html
+++ b/templates/marketplace.html
@@ -9,28 +9,30 @@
         <form action="/upload-image" enctype="multipart/form-data" method = "POST">
         Image File: <input type="file" id="img" name ="img" accept="image/*" value = "Upload a new cookie design!">
         <br><br>Image Name: <input type="text" id="name" name="name">
+        <br><br>User: <input type="text" name="temp-username">
         <input type="submit">
         </form>
         <br>
 
         <p>OR</p>
         <p>Search for a design made by another user!</p>
-        <form action="/image-search" method = "POST">
-        <input type="text">
-        <input type="button" value = "Search">
+        <form action="/image-search" method = "GET">
+        <input type="text" name="search">
+        <input type="Submit">
         </form>
         
         <br><br>
         
-        <h2>User Images</h2>
+        <h2>{{imgheader}}</h2>
         <div class = "img-container">
         {% for i in items %}
             <div>
             <h2 align="center">{{i['title']}}</h2>
+            <h4 align="center">Uploaded By {{i['username']}}</h4>            
             <image src="{{i['url']}}" class = "market-image">
             </div>
         {% else %}
-            <br>No Images Found.
+            <br><h2>No Images Found.</h2>
         {% endfor %}
         </div>
 
