Improved search functionality

--- a/templates/marketplace.html
+++ b/templates/marketplace.html
@@ -10,7 +10,7 @@
         Image File: <input type="file" id="img" name ="img" accept="image/*" value = "Upload a new cookie design!">
         <br><br>Image Name: <input type="text" id="name" name="name">
         <br><br>User: <input type="text" name="temp-username">
-        <input type="submit">
+        <input type="submit" value="Upload">
         </form>
         <br>
 
@@ -18,7 +18,7 @@
         <p>Search for a design made by another user!</p>
         <form action="/image-search" method = "GET">
         <input type="text" name="search">
-        <input type="Submit">
+        <input type="Submit" value="Search">
         </form>
         
         <br><br>
