--- a/templates/create.html
+++ b/templates/create.html
@@ -1,6 +1,9 @@
-   
 {% extends '_base.html' %}
 {% block content %}
+
+{% if err %}
+    <p name = "status">Error: {{err}}</p>
+{% endif %}
     <form method="post" action="/create-user">
         <label for="uname">Username:</label><br>
         <input type="text" id="uname" name="uname"><br>
