--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,14 @@
 {% extends '_base.html' %}
 {% block content %}
+    {% if err %}
+        <p name = "status">Error: {{err}}</p>
+    {% endif %}
         <form method = "post" action="/login">
             <label for="uname">Username:</label><br>
             <input type="text" id="uname" name="uname"><br>
             <label for="password">Password:</label><br>
             <input type="password" id="password" name="password"><br><br> 
-            <input type="submit" value="Submit">
+            <input type="submit" value="Login">
         </form>
 
         Not registered? 
