--- a/templates/_game.html
+++ b/templates/_game.html
@@ -3,6 +3,7 @@
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="stylesheet" href="/s/style.css">
+        <div id = "topOfPage">
         <h1>{% if page_title %} {{page_title}}{% endif %}</h1>
         <nav>
             <a href="index.html"><button>Home</button></a>
@@ -12,6 +13,7 @@
             <a href="marketplace.html"><button>Marketplace</button></a>
             <a href="leaderboard.html"><button>Leaderboard</button></a>
         </nav>
+        </div>
     </head>
     <body>
         <br>
