--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -4,8 +4,8 @@
     <table>
         <tr>
             <td><strong>Name</strong></td>
-            <td><strong>Cookies</strong></td>
-            <td><strong>Cookies per Second</strong></td>
+            <td><strong>Collectibles</strong></td>
+            <td><strong>Collectibles per Second</strong></td>
         </tr>
         {% for player in players %}
         <tr>
