--- a/templates/marketplace.html
+++ b/templates/marketplace.html
@@ -5,25 +5,23 @@
         {% if status %}
             <p>Status: {{status}}</p>
         {% endif %}
+        <div id = "userinput">
         <form action="/upload-image" enctype="multipart/form-data" method = "POST">
         Image File: <input type="file" id="img" name ="img" accept="image/*" value = "Upload a new cookie design!">
         <br><br>Image Name: <input type="text" id="name" name="name">
         <br><br>User: <input type="text" name="temp-username">
         <input type="submit" value="Upload">
         </form>
-        
-        <p>This is the place to make your cookies special. Create or search for a new design!</p>
-        <div id = "userinput">
-        <input type="button" value = "Upload a new cookie design!">
         </div>
-        <br>
 
         <p>OR</p>
         <p>Search for a design made by another user!</p>
+        <div id = "userinput">
         <form action="/image-search" method = "GET">
-        <input type="text" name="search">
-        <input type="Submit" value="Search">
+        <br>Search: <input type="text" name="search">
+        <input type="Submit" value="Submit">
         </form>
+        </div>
         
         <br><br>
         
@@ -43,8 +41,4 @@
         {% endfor %}
         </div>
 
-        <div id = "userinput">
-        <input type="text">
-        <input type="button" value = "Search">
-        </div>
 {% endblock %}
