--- a/templates/_game.html
+++ b/templates/_game.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="/s/ajaxRequests.js"></script>
+        <script src="/s/gameLogic.js"></script>
         <link rel="stylesheet" href="/s/style.css">
         <div id = "topOfPage">
         <h1>{% if page_title %} {{page_title}}{% endif %}</h1>
@@ -17,10 +19,21 @@
     </head>
     <body>
         <br>
+        <div id = "userinput">
         <h2>Welcome{% if user is defined and user['uname'] is defined %} {{user['uname']}}{% endif %}!</h2>
+        </div>
 
         {% block content %} {% endblock %}
 
-        <h2 id="total">{% if user is defined and user['collectibles'] is defined %}{{user['collectibles']}}{% else %}-1{% endif %}</h2>
+        <h2 id="total">{% if user is defined and user['collectibles'] is defined %}{{user['collectibles']}}{% else %}0{% endif %}</h2>
+        <h3 id = "userinput">Collectibles</h3>        
+    
+        <br><br><br>
+        {% if user is defined %}
+        <input id="assemblyLineBuyButton" type="button" onclick="buyFactory(userObj.uname, 1)" value="Assembly Line - 100c"></input>
+        <input type="button" onclick="getUserJson(userObj.uname)" value="test getUserJson"></input>
+        <input type="button" onclick="updateAccountFromJson(userObj)" value="test updateAccountFromJson"></input>
+        {% endif %}
+    
     </body>
     </html>
