removed overreliance on requests

--- a/templates/_game.html
+++ b/templates/_game.html
@@ -62,7 +62,7 @@
     
         <br><br><br>
         {% if user is defined %}        
-        <a><button id="assemblyLineBuyButton" type="button" onclick="buyFactory(userObj.uname, 1)" value="Assembly Line - 100c">Assembly Line - 100c</button></a>
+        <a><button id="assemblyLineBuyButton" type="button" onclick="buyFactoryLocal(1)" value="Assembly Line - 100c">Assembly Line - 100c</button></a>
         <!--<input type="button" onclick="getAccountJson(userObj.uname)" value="test getUserJson"></input>-->
         <!--<input type="button" onclick="updateAccountFromJson(userObj)" value="test updateAccountFromJson"></input> -->
         <!--<input type="button" onclick="addCPS(userObj.uname)" value="test addCPS"></input>-->
